--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
-<title>Redirecting to https://wso2.github.io/wso2-cellery.github.io/</title>
-<meta http-equiv="refresh" content="0; URL=https://wso2.github.io/wso2-cellery.github.io/">
-<link rel="canonical" href="https://wso2.github.io/wso2-cellery.github.io/">
+<title>Redirecting to https://wso2.github.io/cellery.github.io/</title>
+<meta http-equiv="refresh" content="0; URL=https://wso2.github.io/cellery.github.io/">
+<link rel="canonical" href="https://wso2.github.io/cellery.github.io/">
